// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MyAwesomeApp > should match snapshot 1`] = `
<div>
  <div
    data-testid="test-div"
  >
    <h1
      data-testid="first-name-title"
    >
      valentin
    </h1>
    <h2>
      cerezuela
    </h2>
    <p>
      The Last of us ,LOL ,Elden Ring
    </p>
    <p>
      4
    </p>
    <h1>
      Not active
    </h1>
    <p
      style="background-color: rgb(250, 250, 250); border-radius: 1px; padding: 10px;"
    >
      {"zipCode":"abc213","country":"Canada"}
    </p>
    <p>
      Hoal com o es que e
    </p>
  </div>
</div>
`;

exports[`MyAwesomeApp > should match snapshot div 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        data-testid="test-div"
      >
        <h1
          data-testid="first-name-title"
        >
          valentin
        </h1>
        <h2>
          cerezuela
        </h2>
        <p>
          The Last of us ,LOL ,Elden Ring
        </p>
        <p>
          4
        </p>
        <h1>
          Not active
        </h1>
        <p
          style="background-color: rgb(250, 250, 250); border-radius: 1px; padding: 10px;"
        >
          {"zipCode":"abc213","country":"Canada"}
        </p>
        <p>
          Hoal com o es que e
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      data-testid="test-div"
    >
      <h1
        data-testid="first-name-title"
      >
        valentin
      </h1>
      <h2>
        cerezuela
      </h2>
      <p>
        The Last of us ,LOL ,Elden Ring
      </p>
      <p>
        4
      </p>
      <h1>
        Not active
      </h1>
      <p
        style="background-color: rgb(250, 250, 250); border-radius: 1px; padding: 10px;"
      >
        {"zipCode":"abc213","country":"Canada"}
      </p>
      <p>
        Hoal com o es que e
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`MyAwesomeApp > should match snapshot div v2 1`] = `
<div
  data-testid="test-div"
>
  <h1
    data-testid="first-name-title"
  >
    valentin
  </h1>
  <h2>
    cerezuela
  </h2>
  <p>
    The Last of us ,LOL ,Elden Ring
  </p>
  <p>
    4
  </p>
  <h1>
    Not active
  </h1>
  <p
    style="background-color: rgb(250, 250, 250); border-radius: 1px; padding: 10px;"
  >
    {"zipCode":"abc213","country":"Canada"}
  </p>
  <p>
    Hoal com o es que e
  </p>
</div>
`;
